[package]
name = "loadtest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = { version = "0.14", features = ["gaggle"]}
tokio = { version = "1.12.0", features = ["full"] }
fake = "2.4"
rand = "0.8"
